--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,24 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  
 	<groupId>me.olloth.plugins.portcullis</groupId>
 	<artifactId>Portcullis</artifactId>
 	<version>dev</version>
 	<name>Portcullis</name>
-	<repositories>
-		<repository>
-			<id>bukkit-repo</id>
-			<url>http://repo.bukkit.org/artifactory/repo</url>
-		</repository>
-		<repository>
-			<id>spout-repo</id>
-			<name>Spout API</name>
-			<url>http://repo.getspout.org/</url>
-			<layout>default</layout>
-		</repository>
-	</repositories>
+	
+  <repositories>
+    <repository>
+      <id>bukkit-repo</id>
+      <url>http://repo.bukkit.org/content/groups/public/</url>
+    </repository>
+    <repository>
+      <id>spout-repo</id>
+      <name>Spout project maven repo</name>
+      <url>http://nexus.spout.org/content/groups/public/</url>
+    </repository>
+  </repositories>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -30,18 +32,20 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 	<dependencies>
-		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.getspout</groupId>
-			<artifactId>spoutapi</artifactId>
-			<version>dev-SNAPSHOT</version>
-		</dependency>
+    <dependency>
+      <groupId>org.bukkit</groupId>
+      <artifactId>bukkit</artifactId>
+      <!-- Bukkit API Version, change if out dated -->
+      <version>1.3.2-R1.0</version>
+      <type>jar</type>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.getspout</groupId>
+      <artifactId>spoutplugin</artifactId>
+      <version>dev-SNAPSHOT</version>
+    </dependency>
 	</dependencies>
 </project>
